<resources>
    <string name="app_name">MedAssist</string>
    <string name="search">Search</string>
    <string name="past">Past\nMedicine</string>
    <string name="current">Current\nMedicine</string>
    <string name="add">Add\nMedicine</string>
    <string name="contact">Contact us at : medAssist2023@gmail.com</string>
    <string name="textMedName">Medicine Name:</string>
    <string name="textDosage">Dosage Per:</string>
    <string name="textFrequency">Frequency:</string>
    <string name="textRefill">Refills:</string>
    <string name="textDuration">Duration:</string>
    <string name="textExpiration">Expiration Date:</string>
    <string name="textInstructions">Special Instructions:</string>
    <string name="textQR">Scan QR Code</string>
    <string name="textQuantity">Quantity:</string>
    <string name="dosageUnit">mg/mL</string>
    <string name="textDocName">Doctors Name:</string>
    <string name="textDocNumber">Doctors Number:</string>
    <string name="submit">submit</string>
    <string name="sort">Sort by:</string>
    <string name="sortName">name</string>
    <string name="sortFrequency">freq</string>
    <string name="sortDateAdded">added</string>
    <string name="privacy_statement">Privacy Statement</string>
    <string name="push_notifications">Push Notifications</string>
    <string name="calendar_notifications">Automatic expiration Notifications</string>
    <string name="dark_theme">Dark Theme</string>
    <string name="delete_account">Delete Account</string>
    <string name="adjust_font_size">Adjust Font Size</string>
    <string name="settings">Settings</string>
    <string name="small">Small</string>
    <string name="medium">Medium</string>
    <string name="large">Large</string>
</resources>