<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="16dp">

    <TextView
        android:id="@+id/settingsTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/settings"
        android:textSize="18sp"
        android:textStyle="bold"
        android:layout_marginBottom="8dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <Button
        android:id="@+id/privacyStatementBtn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/privacy_statement"
        app:layout_constraintTop_toBottomOf="@id/settingsTitle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <Switch
        android:id="@+id/pushNotificationsSwitch"
        android:layout_width="0dp"
        android:layout_height="48sp"
        android:text="@string/push_notifications"
        app:layout_constraintTop_toBottomOf="@id/privacyStatementBtn"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <Switch
        android:id="@+id/calendarNotificationsSwitch"
        android:layout_width="0dp"
        android:layout_height="48sp"
        android:text="@string/calendar_notifications"
        app:layout_constraintTop_toBottomOf="@id/pushNotificationsSwitch"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>


    <Switch
        android:id="@+id/themeSwitch"
        android:layout_width="0dp"
        android:layout_height="48sp"
        android:text="@string/dark_theme"
        app:layout_constraintTop_toBottomOf="@id/calendarNotificationsSwitch"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>


    <Button
        android:id="@+id/deleteAccountBtn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/delete_account"
        app:layout_constraintTop_toBottomOf="@id/themeSwitch"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <RadioGroup
        android:id="@+id/fontSizeRadioGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/fontSizeLabel"
        app:layout_constraintEnd_toEndOf="parent">

        <RadioButton
            android:id="@+id/smallFontSizeRadioButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/small"
            android:textSize="16sp"/>

        <RadioButton
            android:id="@+id/mediumFontSizeRadioButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/medium"
            android:textSize="18sp"/>

        <RadioButton
            android:id="@+id/largeFontSizeRadioButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/large"
            android:textSize="20sp"/>
    </RadioGroup>

    <TextView
        android:id="@+id/fontSizeLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/adjust_font_size"
        app:layout_constraintTop_toBottomOf="@id/deleteAccountBtn"
        app:layout_constraintBottom_toTopOf="@id/fontSizeRadioGroup"
        app:layout_constraintStart_toStartOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>