<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="60dp"
    android:layout_marginBottom="50dp" >

    <View
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="0dp" />

    <androidx.camera.view.PreviewView
        android:id="@+id/cameraPreview"
        android:layout_width="match_parent"
        android:layout_height="350dp"
        android:layout_marginTop="60dp"
        android:visibility="gone"
        app:layout_constraintTop_toBottomOf="@id/cameraButton"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/submitButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/submit"
        android:layout_marginTop="80dp"
        app:layout_constraintTop_toBottomOf="@id/textInstructions"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/captureButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/capture"
        android:layout_marginTop="28dp"
        android:visibility="gone"
        app:layout_constraintTop_toBottomOf="@id/cameraPreview"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <ImageButton
        android:id="@+id/cameraButton"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:src="@drawable/camera"
        android:layout_marginTop="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:background="@android:color/transparent"/>

    <TextView
        android:id="@+id/textQR"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/textQR"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@id/cameraButton"
        app:layout_constraintEnd_toEndOf="@id/cameraButton"
        app:layout_constraintTop_toBottomOf="@id/cameraButton"/>

    <TextView
        android:id="@+id/textMedName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/textMedName"
        android:textStyle="bold"
        android:layout_marginTop="60dp"
        android:layout_marginStart="15dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cameraButton" />

    <TextView
        android:id="@+id/textDosage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/textDosage"
        android:textStyle="bold"
        android:layout_marginTop="20dp"
        android:layout_marginStart="15dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textMedName"/>

    <TextView
        android:id="@+id/textQuantity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/textQuantity"
        android:textStyle="bold"
        android:layout_marginTop="20dp"
        android:layout_marginStart="15dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textDosage"/>

    <TextView
        android:id="@+id/textFrequency"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/textFrequency"
        android:textStyle="bold"
        android:layout_marginTop="20dp"
        android:layout_marginStart="15dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textQuantity"/>

    <TextView
        android:id="@+id/textRefill"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/textRefill"
        android:textStyle="bold"
        android:layout_marginTop="20dp"
        android:layout_marginStart="15dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textFrequency"/>

    <TextView
        android:id="@+id/textDuration"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/textDuration"
        android:textStyle="bold"
        android:layout_marginTop="20dp"
        android:layout_marginStart="15dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textRefill"/>

    <TextView
        android:id="@+id/textExpiration"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/textExpiration"
        android:textStyle="bold"
        android:layout_marginTop="20dp"
        android:layout_marginStart="15dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textDuration"/>

    <TextView
        android:id="@+id/textInstructions"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/textInstructions"
        android:textStyle="bold"
        android:layout_marginTop="20dp"
        android:layout_marginStart="15dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textExpiration"/>

    <EditText
        android:id="@+id/editMedName"
        android:layout_width="160dp"
        android:layout_height="40dp"
        android:maxLength="30"
        android:text=""
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="@id/textMedName"
        app:layout_constraintStart_toEndOf="@id/textMedName"
        app:layout_constraintTop_toTopOf="@id/textMedName" />

    <EditText
        android:id="@+id/editDosage"
        android:layout_width="30dp"
        android:layout_height="40dp"
        android:inputType="number"
        android:maxLength="30"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="@id/textDosage"
        app:layout_constraintStart_toEndOf="@id/textDosage"
        app:layout_constraintTop_toTopOf="@id/textDosage" />

    <TextView
        android:id="@+id/dosageUnit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dosageUnit"
        android:textStyle="bold"
        android:layout_marginStart="-3dp"
        app:layout_constraintStart_toEndOf="@id/editDosage"
        app:layout_constraintTop_toTopOf="@id/textDosage"/>

    <EditText
        android:id="@+id/editQuantity"
        android:layout_width="80dp"
        android:layout_height="40dp"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="@id/textQuantity"
        app:layout_constraintStart_toEndOf="@id/textQuantity"
        app:layout_constraintTop_toTopOf="@id/textQuantity" />

    <EditText
        android:id="@+id/editFrequency"
        android:layout_width="80dp"
        android:layout_height="40dp"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="@id/textFrequency"
        app:layout_constraintStart_toEndOf="@id/textFrequency"
        app:layout_constraintTop_toTopOf="@id/textFrequency" />

    <EditText
        android:id="@+id/editRefills"
        android:layout_width="30dp"
        android:layout_height="40dp"
        android:inputType="number"
        android:maxLength="30"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="@id/textRefill"
        app:layout_constraintStart_toEndOf="@id/textRefill"
        app:layout_constraintTop_toTopOf="@id/textRefill" />

    <EditText
        android:id="@+id/editDuration"
        android:layout_width="90dp"
        android:layout_height="40dp"
        android:inputType="date"
        android:maxLength="30"
        android:textSize="14sp"
        android:hint="yyyy/mm/dd"
        app:layout_constraintBottom_toBottomOf="@id/textDuration"
        app:layout_constraintStart_toEndOf="@id/textDuration"
        app:layout_constraintTop_toTopOf="@id/textDuration" />

    <EditText
        android:id="@+id/editExpiration"
        android:layout_width="90dp"
        android:layout_height="40dp"
        android:inputType="date"
        android:maxLength="30"
        android:textSize="14sp"
        android:hint="yyyy/mm/dd"
        app:layout_constraintBottom_toBottomOf="@id/textExpiration"
        app:layout_constraintStart_toEndOf="@id/textExpiration"
        app:layout_constraintTop_toTopOf="@id/textExpiration" />

    <EditText
        android:id="@+id/editInstructions"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:inputType="textMultiLine"
        android:textSize="14sp"
        android:layout_marginTop="-10dp"
        app:layout_constraintStart_toEndOf="@id/textInstructions"
        app:layout_constraintTop_toTopOf="@id/textInstructions" />

</androidx.constraintlayout.widget.ConstraintLayout>