<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <FrameLayout
        android:id="@+id/fragmentLocation"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <View
                android:id="@+id/header"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:background="@color/blue"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/current"
                android:layout_width="wrap_content"
                android:layout_height="60dp"
                android:text="@string/current"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toStartOf="@id/past"
                app:layout_constraintTop_toTopOf="parent"
                android:background="@drawable/menu_border"
                android:textColor="#000000"
                app:backgroundTint="@null"
                android:layout_marginEnd="-3dp" />
            <Button
                android:id="@+id/past"
                android:layout_width="wrap_content"
                android:layout_height="60dp"
                android:text="@string/past"
                app:layout_constraintStart_toEndOf="@id/current"
                app:layout_constraintEnd_toStartOf="@id/add"
                app:layout_constraintTop_toTopOf="parent"
                android:background="@drawable/menu_border"
                android:textColor="#000000"
                app:backgroundTint="@null"
                android:layout_marginEnd="-3dp" />
            <Button
                android:id="@+id/add"
                android:layout_width="wrap_content"
                android:layout_height="60dp"
                android:text="@string/add"
                app:layout_constraintStart_toEndOf="@id/past"
                app:layout_constraintEnd_toStartOf="@id/search"
                app:layout_constraintTop_toTopOf="parent"
                android:background="@drawable/menu_border"
                android:textColor="#000000"
                app:backgroundTint="@null"
                android:layout_marginEnd="-3dp"/>
            <Button
                android:id="@+id/search"
                android:layout_width="wrap_content"
                android:layout_height="60dp"
                android:text="@string/search"
                app:layout_constraintStart_toEndOf="@id/add"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:background="@drawable/menu_border"
                android:textColor="#000000"
                app:backgroundTint="@null" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerView"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginTop="60dp"
                android:layout_marginBottom="50dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/header" />

            <View
                android:id="@+id/footer"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:background="@color/dark_blue"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/recyclerView"/>

            <ImageButton
                android:id="@+id/settings"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:src="@drawable/settings"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@id/footer"
                app:layout_constraintBottom_toBottomOf="parent"
                android:background="@android:color/transparent"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:text="@string/contact"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@id/footer" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </FrameLayout>
</LinearLayout>