<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/outline"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:background="@drawable/med_border"
        android:text=""
        app:layout_constraintBottom_toBottomOf="@id/imageView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/imageView"
        app:layout_constraintVertical_bias="1.0" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="100dp"
        android:layout_height="100dp"
        app:srcCompat="@drawable/medicinelogo"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/medicineName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginLeft="4dp"
        android:text="medName"
        app:layout_constraintStart_toEndOf="@id/imageView"
        app:layout_constraintTop_toTopOf="@id/imageView" />

    <TextView
        android:id="@+id/dosageTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:text="@string/textDosage"
        app:layout_constraintStart_toStartOf="@id/medicineName"
        app:layout_constraintTop_toBottomOf="@id/medicineName" />

    <TextView
        android:id="@+id/dosage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="4dp"
        android:text="dosage"
        app:layout_constraintStart_toEndOf="@id/dosageTitle"
        app:layout_constraintTop_toTopOf="@id/dosageTitle" />

    <TextView
        android:id="@+id/frequencyTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        android:text="@string/textFrequency"
        app:layout_constraintStart_toStartOf="@id/dosageTitle"
        app:layout_constraintTop_toBottomOf="@id/dosageTitle" />

    <TextView
        android:id="@+id/frequency"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="4dp"
        android:text="frequency"
        app:layout_constraintStart_toEndOf="@id/frequencyTitle"
        app:layout_constraintTop_toTopOf="@id/frequencyTitle" />

    <TextView
        android:id="@+id/quantityTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        android:text="@string/textQuantity"
        app:layout_constraintStart_toStartOf="@id/frequencyTitle"
        app:layout_constraintTop_toBottomOf="@id/frequencyTitle" />

    <TextView
        android:id="@+id/quantity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="4dp"
        android:text="quantity"
        app:layout_constraintStart_toEndOf="@id/quantityTitle"
        app:layout_constraintTop_toTopOf="@id/quantityTitle" />

    <ImageButton
        android:id="@+id/calendarIcon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/calendar"
        android:backgroundTint="@color/white"
        android:onClick="calendar"
        android:tag="@+id/medicineID"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>